replace tabs by spaces